[gd_scene load_steps=22 format=3 uid="uid://ciklrif6g6t7j"]

[ext_resource type="Script" path="res://scripts/Elements/common_cultist.gd" id="1_ipmql"]
[ext_resource type="Script" path="res://scenes/Battle/BattleStats.gd" id="2_ddoum"]
[ext_resource type="SpriteFrames" uid="uid://csxbvebttd5v8" path="res://SpriteFrames/mutatedDog.tres" id="3_tnrnl"]
[ext_resource type="Texture2D" uid="uid://d0rys6gafmmoi" path="res://assets/characters/common_cultist.png" id="4_838uu"]

[sub_resource type="Resource" id="Resource_kcs12"]
script = ExtResource("2_ddoum")
atk = 2
def = 1
hp = 5
attack_text = "bites"

[sub_resource type="AtlasTexture" id="AtlasTexture_w7q23"]
atlas = ExtResource("4_838uu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gie8"]
atlas = ExtResource("4_838uu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqkua"]
atlas = ExtResource("4_838uu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpjnr"]
atlas = ExtResource("4_838uu")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1423v"]
atlas = ExtResource("4_838uu")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h445"]
atlas = ExtResource("4_838uu")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb7w3"]
atlas = ExtResource("4_838uu")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5prx"]
atlas = ExtResource("4_838uu")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m1yd"]
atlas = ExtResource("4_838uu")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8t2a"]
atlas = ExtResource("4_838uu")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwqgl"]
atlas = ExtResource("4_838uu")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vip7"]
atlas = ExtResource("4_838uu")
region = Rect2(128, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_82inc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7q23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gie8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqkua")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpjnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1423v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h445")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb7w3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5prx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m1yd")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8t2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwqgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vip7")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5b3ak"]
size = Vector2(28, 54)

[sub_resource type="CircleShape2D" id="CircleShape2D_obycf"]
radius = 34.1321

[sub_resource type="CircleShape2D" id="CircleShape2D_ur72l"]
radius = 215.058

[node name="MutatedDog" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_ipmql")
battle_stats = SubResource("Resource_kcs12")
battle_sprite = ExtResource("3_tnrnl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_82inc")
animation = &"walk_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5b3ak")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="AttackArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_obycf")

[node name="AggroArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
shape = SubResource("CircleShape2D_ur72l")
debug_color = Color(0.997824, 0, 0.157157, 0.42)

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
